--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "prisma": "^5.22.0"
   }
 }
