--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
+    "backend": ".",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "prisma": "^5.22.0"
