--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "backend": ".",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^5.22.0"
   }
 }
