--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.689.0",
+    "@aws-sdk/s3-request-presigner": "^3.689.0",
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
