--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.63",
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
