--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,16 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^5.0.63",
     "@aws-sdk/client-s3": "^3.689.0",
     "@aws-sdk/s3-request-presigner": "^3.689.0",
+    "@clerk/clerk-sdk-node": "^5.0.63",
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
     "backend": ".",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.22.0"
