--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.689.0",
@@ -27,12 +29,22 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.2",
+    "@storybook/addon-essentials": "^8.4.3",
+    "@storybook/addon-interactions": "^8.4.3",
+    "@storybook/addon-onboarding": "^8.4.3",
+    "@storybook/blocks": "^8.4.3",
+    "@storybook/nextjs": "^8.4.3",
+    "@storybook/react": "^8.4.3",
+    "@storybook/test": "^8.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-plugin-storybook": "^0.11.0",
     "postcss": "^8",
+    "storybook": "^8.4.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
