--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
