--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.689.0",
     "@aws-sdk/s3-request-presigner": "^3.689.0",
     "@clerk/clerk-sdk-node": "^5.0.63",
+    "@clerk/express": "^1.3.12",
     "@prisma/client": "^5.22.0",
     "@types/express": "^5.0.0",
     "@types/multer": "^1.4.12",
